--- a/views/class.ejs
+++ b/views/class.ejs
@@ -3,59 +3,46 @@
 <div class="container-fluid">
   <div class="single-class-container">
     <div class="profile-card">
-      <img src="./images/BowTiedOx.jpg" class="user-img rounded-circle" alt="user-img">
-      <p class="username">By BowTiedOx</p>
+      <img src="./images/<%- deGenClass.deGen.avatarImg %>" class="user-img rounded-circle" alt="user-img">
+      <p class="username">By <%- deGenClass.deGen.alias %></p>
     </div>
     <div class="class-content">
-      <h2 class="class-title">Why you must train</h2>
+      <h2 class="class-title"><%- deGenClass.title %></h2>
       <p class="class-description">
-        Here BowTiedOx, 5x DeGen Island bodybuilding champion is going to teach you the basics of training and it's importance
-        Here BowTiedOx, 5x DeGen Island bodybuilding champion is going to teach you the basics of training and it's importance
+        <%- deGenClass.shortDescription %>
       </p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-        aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-        aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </p>
+      <% for(let i=0; i < deGenClass.description.length ; i++) { %>
+      <p><%- deGenClass.description[i] %></p>
+      <% } %>
       <a href="#" class="class-external-link">
-        <p>Did you like the content? Check out BowTiedOx website for more!</p>
+        <p>Did you like the content? Check out <%- deGenClass.deGen.alias %> website for more!</p>
       </a>
     </div>
   </div>
   <div class="comments-container mx-auto">
-    <h2 class="mb-4">3 Comments</h2>
+    <h2 class="mb-4"><%- deGenClass.comments.length %> Comments</h2>
 
     <table class="table">
-      <% for(let i=0; i < 3; i++) { %>
+      <% for(let i=0; i < deGenClass.comments.length; i++) { %>
       <tr>
         <td>
           <div class="comment-info-wrapper">
             <div class="comment-username">
               <span class="iconify" data-icon="mdi:account-circle" style="color: #6c757d;" data-width="24" data-height="24"></span>
-              <h5 class="class-title mx-1">BowTiedOx</h5>
+              <h5 class="class-title mx-1"><%- deGenClass.comments[i].author %></h5>
             </div>
             <div class="comment-date">
-              <p>19 OCT 2021</p>
+              <p><%- deGenClass.comments[i].date.getDate()  + "-" + (deGenClass.comments[i].date.toLocaleString("en-us", { month: "short" })) + "-" + deGenClass.comments[i].date.getFullYear() %></p>
             </div>
           </div>
           <p class="class-description">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            <%- deGenClass.comments[i].content %>
           </p>
         </td>
       </tr>
       <% } %>
     </table>
-<h2 class="mb-4">Leave a comment</h2>
+    <h2 class="mb-4">Leave a comment</h2>
     <form class="new-comment-form" action="/new-comment" method="post">
       <div class="form-floating mb-3">
         <input type="text" class="form-control" id="floatingInput" placeholder="You username">
