--- a/views/class.ejs
+++ b/views/class.ejs
@@ -3,7 +3,7 @@
 <div class="container-fluid">
   <div class="single-class-container">
     <div class="profile-card">
-      <img src="./images/<%- deGenClass.deGen.avatarImg %>" class="user-img rounded-circle" alt="user-img">
+      <img src="/images/<%- deGenClass.deGen.avatarImg %>" class="user-img rounded-circle" alt="user-img">
       <p class="username">By <%- deGenClass.deGen.alias %></p>
     </div>
     <div class="class-content">
