--- a/views/deGens.ejs
+++ b/views/deGens.ejs
@@ -20,7 +20,7 @@
               <span class="username"><%- deGensArray[i].twitter %></span>
             </div>
           </a>
-          <a class="profile-link" href="<%- deGensArray[i].substackLink %>" target="_blank">
+          <a class="profile-link" href="https://<%-deGensArray[i].substack %>.substack.com/subscribe" target="_blank">
             <div class="user-links">
               <span class="iconify" data-icon="simple-icons:substack"></span>
               <span class="username"><%- deGensArray[i].substack %></span>
