--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -25,7 +25,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="./css/styles.css">
+  <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
@@ -48,22 +48,22 @@
             <div class="collapse navbar-collapse" id="navbarToggler">
               <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link" href="./classes">Classes</a>
+                  <a class="nav-link" href="/classes">Classes</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./shop">Shop</a>
+                  <a class="nav-link" href="/shop">Shop</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./deGens">DeGens</a>
+                  <a class="nav-link" href="/deGens">DeGens</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">DeGen Jungle</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./about">About Us</a>
+                  <a class="nav-link" href="/about">About Us</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./contact">Contact</a>
+                  <a class="nav-link" href="/contact">Contact</a>
                 </li>
               </ul>
             </div>
