--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,11 +2,11 @@
 </div>
 <footer>
   <p>DeGen University © <%= new Date().getFullYear() %></p>
-  <div class="bg-circle-bottom-container">
+  <!-- <div class="bg-circle-bottom-container">
     <div>
       <div class="bg-circle bg-circle-bottom bg-light"></div>
     </div>
-  </div>
+  </div> -->
 </footer>
 
 </div>
