--- a/views/classes.ejs
+++ b/views/classes.ejs
@@ -3,7 +3,7 @@
 <div class="container-fluid">
   <h1 class="classes-title">Find Our Classes</h1>
   <div class="classes-filters">
-    <input class="form-control" type="text" name="searchQuery" placeholder="Search">
+    <input class="form-control search-filter" type="text" name="searchQuery" placeholder="Search">
     <select class="form-select">
       <option selected>Sort by...</option>
       <% for(let i=0; i < filters.length ; i++) { %>
@@ -13,11 +13,17 @@
   </div>
   <table class="table table-hover classes-table">
     <% for(let i=0; i < classesArray.length ; i++) { %>
-    <tr>
+      <% let classes = ""; %>
+      <% for (let j=0; j< filters.length ; j++) { %>
+        <% if (classesArray[i].tags.includes(filters[j].content)) {%>
+          <% classes = classes + " " + filters[j].value; %>
+        <% } %>
+      <% } %>
+    <tr class="<%- classes %>">
       <td>
         <div class="table-row-flex-wrapper">
           <div class="profile-card">
-            <img src="./images/<%- classesArray[i].deGen.avatarImg %>" class="user-img rounded-circle" alt="user-img">
+            <img src="../<%- classesArray[i].deGen.avatarImg %>" class="user-img rounded-circle" alt="user-img">
             <div class="username-container">
               <a class="profile-link" href="https://www.twitter.com/<%- classesArray[i].deGen.twitter %>" target="_blank">
                 <span class="iconify" data-icon="mdi:twitter" data-width="20" data-height="20"></span>
@@ -32,6 +38,7 @@
               <p class="class-description">
                 <%- classesArray[i].shortDescription %></p>
               <p class="class-tags">Tags: <em><%- classesArray[i].tags.slice(0, -1).join(', ') + ", " + classesArray[i].tags.slice(-1)%></em></p>
+            </div>
           </a>
         </div>
       </td>
@@ -39,5 +46,5 @@
     <% } %>
   </table>
 </div>
-
+<script src="classesFilter.js" charset="utf-8"></script>
 <%- include('partials/footer') %>
