--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -29,9 +29,9 @@
 </head>
 
 <body>
-  <div class="bg-circle-wrapper">
+  <!-- <div class="bg-circle-wrapper">
     <div class="bg-circle bg-circle-top bg-light"></div>
-  </div>
+  </div> -->
   <div class="flex-wrapper">
     <div>
       <header>
@@ -51,19 +51,10 @@
                   <a class="nav-link" href="/classes">Classes</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/shop">Shop</a>
-                </li>
-                <li class="nav-item">
                   <a class="nav-link" href="/deGens">DeGens</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">DeGen Jungle</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="/about">About Us</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="/contact">Contact</a>
+                  <a class="nav-link" href="/shop">Shop</a>
                 </li>
               </ul>
             </div>
