--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/header') %>
 <div class="container-fluid flex-wrapper-main login-container">
 
-  <form class="login-form" action="/login" method="post">
+  <form class="login-form" action="/register" method="post">
     <div class="mb-3">
       <label for="inputUsername" class="form-label">Username</label>
       <input type="text" class="form-control" id="inputUsername" name="username">
@@ -10,7 +10,7 @@
       <label for="inputPassword" class="form-label">Password</label>
       <input type="password" class="form-control" id="inputPassword" name="password">
     </div>
-    <button type="submit" class="btn btn-outline-secondary">Log in</button>
+    <button type="submit" class="btn btn-outline-secondary">Register</button>
   </form>
 
 </div>
