pre-deliver to heroku

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -4,11 +4,22 @@
   <h1>Who we are</h1>
   <div>
     <div>
-      <p>DeGen University is the number one place for new and soon to be DeGens to learn the basics of everything they should know to have a nice journey on the jungle!
-      <p>Created by BowTiedLeviathan, your friendly jungle professor.</p>
-      <p>At the end of each of our classes you wild find a link (affiliate if possible) to our amazing jungle creators!</p>
-      <p>You will find every jungle product currently on sale and our substacks in the "products" tab!</p>
-      <p>If you're a new degen and have something amazing to sell, contact our staff and we will gladly put your product!</p>
+      <p>Degen university is a website run and inspired by the bowtiedjungle, an annonymous, descentralized
+        community with the purpose of building the people that wil thrive on the future of the internet: web
+        3.0 and the creator economy.</p>
+      <p>The bowtiedjunge has the best of the best on their field. Without credentials, people have to prove
+        their worth or be left into obscurity. If the information doesn’t work, it gets called out. That selffiltering process lets the bowtiedjungle select the best possible suited people for a specific niche.</p>
+      <p>Degen University has the mission of bringing all of that content into one place. Making it easier for
+        aspiring jungle members or anyone that doesnt want to be left behind in the greatest wealth
+        transfer of human history to access the tools necesary to succeed.</p>
+      <p>College in the current era is a trap aimed at creating average and mediocre people with replaceable
+        skills.</p>
+      <p>Sometines, turning people into debt slaves.</p>
+      <p>We don’t provide useless knowledge. We give you the absolute best information for you to take
+        action and become the new elite. No politics, no meaningless ideologies, no magic pill guru. Just
+        straight to the point, valuable and actionable information.</p>
+      <p>At the same time, there’s no university without professors. And we want to help those who are
+        helping you to get all the attention they deserve.</p>
     </div>
   </div>
 </div>
