--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -90,10 +90,39 @@ h1 {
   font-size: 4vw;
 }
 
-/* HEADER */
-nav .brand-logo span {
-  font-size: 1.75rem;
+.navbar-brand img {
+  width: 350px;
 }
+
+/* HORIZONTAL RULES */
+.skills {
+  max-width: 50%;
+  margin: 40px auto;
+  text-align: center;
+}
+.skills .hr-text {
+  position: relative;
+  border: 0;
+  height: 1.5em;
+}
+.skills .hr-text:before {
+  background: linear-gradient(to right, transparent, #000, transparent);
+  position: absolute;
+  left: 0;
+  top: 50%;
+  width: 100%;
+  height: 1px;
+}
+.skills .hr-text:after {
+  position: relative;
+  display: inline-block;
+  color: black;
+  padding: 0 0.5em;
+  line-height: 1.5em;
+  color: #24bba0;
+  background-color: black;
+}
+
 
 /* INDEX PAGE */
 .index-container {
@@ -104,12 +133,20 @@ nav .brand-logo span {
   flex-direction: row-reverse;
 }
 
-.header-logo-container {
-  background-image: url("../images/colleges-are-zeros.png");
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
+.header-side-text {
   min-height: 20vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+}
+
+.header-side-text h2 {
+  color: #1a99be;
+}
+
+.index-img {
+  text-align: center;
 }
 
 .header-logo-container p {
@@ -342,9 +379,14 @@ color: black;
     width: 99vw;
   }
 
-  nav .brand-logo span {
-    font-size: 1.25rem;
-  }
+
+.navbar-wrapper {
+justify-content: center !important;
+}
+
+.navbar-wrapper img {
+  width: 60vw;
+}
 
   .header-logo-container {
     height: 60vw;
