--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,13 @@
 <%- include('partials/header') %>
 
 <div class="container-fluid flex-wrapper-main index-container">
-  <div class="row header-row">
-    <div class="col-12 col-lg-6  header-logo-container">
+  <div class="row header-row mb-5">
+    <div class="col-12 col-lg-6  header-side-text">
+      <h2>Welcome!</h2>
+      <h4>The world is changing before your eyes <br>
+        And it will not wait for you <br>
+        We teach you how to be successful in it</h4>
+    </div>
     <div class="col-12 col-lg-6 carousel-container index-section">
       <div id="carouselCaptions" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
@@ -11,7 +16,7 @@
               <img src="./<%-newsArray[0].image %>" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title"><%-newsArray[0].title %></h5>
-                  <p class="card-text"><%-newsArray[0].description %></p>
+                <p class="card-text"><%-newsArray[0].description %></p>
               </div>
             </div>
           </div>
@@ -22,9 +27,9 @@
               <div class="card-body">
                 <h5 class="card-title"><%-newsArray[i].title %></h5>
                 <% if (newsArray[i].description.length <= 140) { %>
-                    <p class="card-text"><%-newsArray[i].description %></p>
+                <p class="card-text"><%-newsArray[i].description %></p>
                 <% } else { %>
-                    <p class="card-text"><%-newsArray[i].description.slice(0,140) + "..." %></p>
+                <p class="card-text"><%-newsArray[i].description.slice(0,140) + "..." %></p>
                 <% } %>
               </div>
             </div>
@@ -42,7 +47,50 @@
       </div>
     </div>
   </div>
-
+  <div class="row mb-5">
+    <div class="col-12  header-side-text">
+      <h2>The world is undergoing a paradigm shift at a rapid pace and traditional education cannot
+        keep up</h2>
+      <h4>We live in a world where confidence in traditional education is at an all-time low. Higher
+        education is a debt trap that is behind the times, leaving people without the tools they need to
+        succeed in a rapidly changing world with a new set of rules. Many people will be left behind in the
+        greatest transfer of wealth in human history. You do not have to be one of them. DeGen University
+        has you covered.</h4>
+    </div>
+  </div>
+  <div class="row mb-5">
+    <div class="col-12 col-lg-6 header-side-text">
+      <h2>Get the tools you need to find your way to excellence. Equal Opportunity, Unequal Results</h2>
+      <h4>With our free courses aimed at levelling the playing field for everyone. You'll learn the basics
+        of cryptocurrency, DeFI, ecommerce, fitness and more. No magic pills. No gurus. </h4>
+        <button type="button" class="btn btn-outline-secondary" name="button">I want to learn</button>
+    </div>
+    <div class="col-12 col-lg-6 index-img">
+      <img src="/images/DEGEN_ANIMALS.png" alt="degen-animals-img">
+    </div>
+  </div>
+  <div class="row header-row mb-5">
+    <div class="col-12 col-lg-6 header-side-text">
+      <h2>Meet our professors</h2>
+      <h4>In DeGen University we select the most elite people in their fields. Would you like to find
+        them? Want to learn more about them? Find all their information and social media in just 2 clicks. </h4>
+        <button type="button" class="btn btn-outline-secondary" name="button">I want to know them</button>
+    </div>
+    <div class="col-12 col-lg-6 index-img">
+      <img src="/images/CLASS_IN_SESSION.png" alt="class-in-session-img">
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12 col-lg-6 header-side-text">
+      <h2>Show your support for us!</h2>
+      <h4>Browse DeGen University's exclusive merch and our professors' products! With every
+        purchase, you help our professors provide you with more and better education.</h4>
+        <button type="button" class="btn btn-outline-secondary" name="button">Click here</button>
+    </div>
+    <div class="col-12 col-lg-6 index-img">
+      <img src="/images/OX_SHOPPING_CART.png" alt="shopping-cart-img">
+    </div>
+  </div>
 </div>
 
 <%- include('partials/footer') %>
