--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -36,12 +36,12 @@
     <div>
       <header>
         <nav class="navbar navbar-expand-lg navbar-light">
-          <div class="container-fluid">
+          <div class="container-fluid navbar-wrapper">
+            <div class="brand-logo navbar-brand">
             <a class="navbar-brand" href="/">
-              <div class="brand-logo">
-                <span>DeGen University</span>
+                <img src="/images/DeGenLogo.png" alt="degen-logo-img">
+              </a>
               </div>
-            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
