--- a/views/classes.ejs
+++ b/views/classes.ejs
@@ -1,7 +1,8 @@
 <%- include('partials/header') %>
 
 <div class="container-fluid">
-  <h1 class="classes-title">Find Our Classes</h1>
+  <h1 class="classes-title">Find our classes</h1>
+<p>Use the search function and the tags tool to find the class you are looking for!</p>
   <div class="classes-filters">
     <input class="form-control search-filter" type="text" name="searchQuery" placeholder="Search">
     <select class="form-select">
