--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -2,8 +2,7 @@
 
 <div class="container-fluid flex-wrapper-main">
   <form class="" action="/contact" method="post">
-    <h1>Contact us</h1>
-    <p>Have something on your mind? We're looking forward to be greater...</p>
+    <h1>Contact</h1>
     <div class="form-floating mb-3">
       <input type="text" class="form-control" id="floatingInput" placeholder="You username">
       <label for="floatingInput">Username</label>
