--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,13 +3,12 @@
 <div class="container-fluid flex-wrapper-main index-container">
   <div class="row header-row mb-5">
     <div class="col-12 col-lg-6  header-side-text">
-      <h2>Welcome!</h2>
-      <h4>The world is changing before your eyes <br>
-        And it will not wait for you <br>
-        We teach you how to be successful in it</h4>
+      <div class="slider-side-text" data-aos="zoom-in">The world is changing before your eyes </div> <br>
+        <div class="slider-side-text" data-aos="zoom-in" data-aos-delay="500">And it will not wait for you </div> <br>
+        <div class="slider-side-text" data-aos="zoom-in"data-aos-delay="1000">We teach you how to be successful in it </div>
     </div>
     <div class="col-12 col-lg-6 carousel-container index-section">
-      <div id="carouselCaptions" class="carousel slide" data-bs-ride="carousel">
+      <div id="carouselCaptions" class="carousel slide" data-bs-ride="carousel" data-aos="zoom-in">
         <div class="carousel-inner">
           <div class="carousel-item active">
             <div class="card">
@@ -47,10 +46,9 @@
       </div>
     </div>
   </div>
-  <div class="row mb-5">
+  <div class="row mb-5 index-section" data-aos="zoom-in">
     <div class="col-12  header-side-text">
-      <h2>The world is undergoing a paradigm shift at a rapid pace and traditional education cannot
-        keep up</h2>
+      <div class="header-title2"></div>
       <h4>We live in a world where confidence in traditional education is at an all-time low. Higher
         education is a debt trap that is behind the times, leaving people without the tools they need to
         succeed in a rapidly changing world with a new set of rules. Many people will be left behind in the
@@ -58,37 +56,42 @@
         has you covered.</h4>
     </div>
   </div>
-  <div class="row mb-5">
+  <div class="row mb-5 index-section" data-aos="zoom-in">
     <div class="col-12 col-lg-6 header-side-text">
-      <h2>Get the tools you need to find your way to excellence. Equal Opportunity, Unequal Results</h2>
+      <div class="header-title3"></div>
       <h4>With our free courses aimed at levelling the playing field for everyone. You'll learn the basics
         of cryptocurrency, DeFI, ecommerce, fitness and more. No magic pills. No gurus. </h4>
-        <button type="button" class="btn btn-outline-secondary" name="button">I want to learn</button>
+        <button onclick="location.href = '/classes';" type="button" class="btn btn-outline-secondary" name="button">I want to learn</button>
     </div>
     <div class="col-12 col-lg-6 index-img">
       <img src="/images/DEGEN_ANIMALS.png" alt="degen-animals-img">
     </div>
   </div>
-  <div class="row header-row mb-5">
+  <div class="row header-row mb-5 index-section" data-aos="zoom-in">
     <div class="col-12 col-lg-6 header-side-text">
-      <h2>Meet our professors</h2>
+      <div class="header-title4"></div>
       <h4>In DeGen University we select the most elite people in their fields. Would you like to find
         them? Want to learn more about them? Find all their information and social media in just 2 clicks. </h4>
-        <button type="button" class="btn btn-outline-secondary" name="button">I want to know them</button>
+        <button onclick="location.href = '/degens';" type="button" class="btn btn-outline-secondary" name="button">I want to know them</button>
     </div>
-    <div class="col-12 col-lg-6 index-img">
+    <div class="col-12 col-lg-6 index-img" data-aos="zoom-in">
       <img src="/images/CLASS_IN_SESSION.png" alt="class-in-session-img">
     </div>
   </div>
-  <div class="row">
+  <div class="row index-section"  data-aos="zoom-in">
     <div class="col-12 col-lg-6 header-side-text">
-      <h2>Show your support for us!</h2>
+      <div class="header-title5"></div>
       <h4>Browse DeGen University's exclusive merch and our professors' products! With every
         purchase, you help our professors provide you with more and better education.</h4>
-        <button type="button" class="btn btn-outline-secondary" name="button">Click here</button>
+        <button onclick="location.href = '/shop';" type="button" class="btn btn-outline-secondary" name="button">Click here</button>
     </div>
     <div class="col-12 col-lg-6 index-img">
       <img src="/images/OX_SHOPPING_CART.png" alt="shopping-cart-img">
+    </div>
+  </div>
+  <div class="row" data-aos="zoom-in">
+    <div class="col-12 text-center colleges-are-zeros-bottom">
+      <img class="" src="/images/colleges-are-zeros-bottom.png" alt="">
     </div>
   </div>
 </div>
