--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,38 @@
 </main>
 </div>
 <footer>
-  <p>DeGen University © <%= new Date().getFullYear() %></p>
+  <div class="skills footer-hr">
+    <hr class="hr-text">
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-6 col-12">
+        <ul>
+          <li><a href="/about">About us</a></li>
+          <li><a href="/contact">Contact</a></li>
+        </ul>
+      </div>
+      <div class="col-lg-6 col-12">
+        <a class="profile-link" href="https://www.twitter.com/dgenuniversity" target="_blank">
+          <div class="user-links">
+            <span class="iconify" data-icon="mdi:twitter" data-width="20" data-height="20"></span>
+            <span class="username">@dgenuniversity</span>
+          </div>
+        </a>
+        <a class="profile-link" href="mailto:degenuniversity@protonmail.com" target="_blank">
+          <div class="user-links">
+            <span class="iconify" data-icon="mdi:email" data-width="20" data-height="20"></span>
+            <span class="username">degenuniversity@protonmail.com</span>
+          </div>
+        </a>
+      </div>
+      <div class="col-12 copyright">
+        <p> © DeGen University</p>
+
+      </div>
+
+    </div>
+  </div>
   <!-- <div class="bg-circle-bottom-container">
     <div>
       <div class="bg-circle bg-circle-bottom bg-light"></div>
