--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -39,8 +39,11 @@
           <div class="container-fluid navbar-wrapper">
             <div class="brand-logo navbar-brand">
             <a class="navbar-brand" href="/">
-                <img src="/images/DeGenLogo.png" alt="degen-logo-img">
+                <img class="degen-logo" src="/images/DeGenLogo.png" alt="degen-logo-img">
               </a>
+              <div class="skills">
+                <hr class="hr-text">
+              </div>
               </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -48,13 +51,13 @@
             <div class="collapse navbar-collapse" id="navbarToggler">
               <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link" href="/classes">Classes</a>
+                  <a class="nav-link" href="/classes"><img src="/images/classes-navbar.png" alt="classes-img"></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/deGens">DeGens</a>
+                  <a class="nav-link" href="/deGens"><img src="/images/degens-navbar.png" alt="degens-img"></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/shop">Shop</a>
+                  <a class="nav-link" href="/shop"><img src="/images/shop-navbar.png" alt="shop-img"></a>
                 </li>
               </ul>
             </div>
