--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -1,7 +1,8 @@
 <%- include('partials/header') %>
 
 <div class="container-fluid">
-  <h1 class="classes-title">DeGen Shop</h1>
+  <h1 class="classes-title">Discover our products and services</h1>
+  <p class="section-subtitle">With the search and tags tool to filter for what you need!</p>
   <div class="classes-filters">
     <input class="form-control search-filter" type="text" name="searchQuery" placeholder="Search">
     <select class="form-select">
