--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -87,39 +87,45 @@ button.submit-btn:hover {
 }
 
 h1 {
-  font-size: 4vw;
+  font-size: 3vw;
 }
 
 .navbar-brand img {
   width: 350px;
 }
 
+.nav-item img {
+  height: 15px;
+  margin-right: 20px;
+}
 /* HORIZONTAL RULES */
 .skills {
-  max-width: 50%;
-  margin: 40px auto;
+  margin: 0 auto;
   text-align: center;
+  position: absolute;
+  width: 350px;
 }
 .skills .hr-text {
   position: relative;
+  margin-bottom: 0;
   border: 0;
   height: 1.5em;
+  background-color: white !important;
+  opacity: 1 !important;
 }
 .skills .hr-text:before {
-  background: linear-gradient(to right, transparent, #000, transparent);
+  content: "";
+  background-image: linear-gradient(to right, rgba(0,0,0,0), rgba(0,0,0,1), rgba(0, 0, 0, 0));
   position: absolute;
   left: 0;
-  top: 50%;
   width: 100%;
-  height: 1px;
+  height: 3px;
 }
 .skills .hr-text:after {
   position: relative;
   display: inline-block;
   color: black;
-  padding: 0 0.5em;
   line-height: 1.5em;
-  color: #24bba0;
   background-color: black;
 }
 
@@ -133,6 +139,8 @@ h1 {
   flex-direction: row-reverse;
 }
 
+
+
 .header-side-text {
   min-height: 20vh;
   display: flex;
@@ -141,8 +149,36 @@ h1 {
   text-align: center;
 }
 
-.header-side-text h2 {
-  color: #1a99be;
+.header-title2 {
+  height: 70px;
+  background: url("/images/header-title2.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.header-title3 {
+  height: 140px;
+  background: url("/images/header-title3-mobile.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.header-title4 {
+  height: 70px;
+  background: url("/images/header-title4.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.header-title5 {
+  height: 70px;
+  background: url("/images/header-title5.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .index-img {
@@ -184,6 +220,24 @@ h1 {
   height: 175px;
 }
 
+.colleges-are-zeros-bottom {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
+
+.colleges-are-zeros-bottom img {
+  width: 30vw;
+}
+
+.index-section {
+  min-height: 40vh;
+}
+
+.slider-side-text{
+  font-size: 130%;
+}
+
 /* CLASSES PAGE */
 .classes-table .table-row-flex-wrapper {
   display: flex;
@@ -191,7 +245,7 @@ h1 {
 }
 
 .classes-title {
-  margin-bottom: 54px;
+  margin-bottom: 16px;
 }
 
 .classes-filters {
@@ -311,12 +365,42 @@ table tr:last-child td {
 }
 
 /* FOOTER */
-footer p {
+footer {
   text-align: center;
-  margin: 0;
-  padding-bottom: 1rem;
+  font-weight: 600;
+  font-size: 1.1rem;
+
+}
+.footer-hr {
+  position: relative;
+  width: 75vw
 }
 
+footer ul {
+  list-style: none;
+  padding-left: 0;
+}
+
+footer a:link, a:visited, a{
+    text-decoration: inherit;
+    color: inherit;
+    cursor: pointer;
+  }
+
+  footer .copyright {
+    margin-top: 10px;
+  }
+
+
+    footer a:hover {
+    text-decoration: underline;
+    color: #6c757d;
+    cursor: pointer;
+  }
+
+  footer a {
+    cursor: default;
+  }
 /* LOGIN PAGE */
 
 .login-container{
@@ -352,6 +436,19 @@ color: black;
     margin: 0 1rem;
     width: 90px;
   }
+
+  .header-title2 {
+    height: 140px;
+    background: url("/images/header-title2-mobile.png");
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+
+  .slider-side-text{
+    font-size: 100%;
+  }
+
 }
 
 /* MOBILE AND TABLET */
@@ -361,9 +458,13 @@ color: black;
   }
 
   h1 {
-    font-size: 10vw;
+    font-size: 5vw;
     text-align: center;
   }
+
+.section-subtitle {
+text-align: center;
+}
 
   button.submit-btn {
     width: auto;
@@ -384,10 +485,23 @@ color: black;
 justify-content: center !important;
 }
 
-.navbar-wrapper img {
+.navbar-wrapper img.degen-logo{
+  width: 60vw;
+
+}
+
+ul.navbar-nav {
+  margin-top: 25px;
+}
+
+.colleges-are-zeros-bottom img, .index-img img {
   width: 60vw;
 }
 
+/* HORIZONTAL RULES */
+.skills {
+  width: 60vw;
+}
   .header-logo-container {
     height: 60vw;
     max-height: 200px;
