--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/header') %>
 
 <div class="container-fluid flex-wrapper-main about-section">
-  <h1>Who we are</h1>
+  <h1>About us</h1>
   <div>
     <div>
       <p>Degen university is a website run and inspired by the bowtiedjungle, an annonymous, descentralized
